--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,26 @@
     }
 }
 
+@keyframes rotate360 {
+    0% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+.main-rotate {
+    animation: rotate360 linear infinite;
+    transform-origin: center;
+}
+
+.tail-rotate {
+    animation: rotate360 linear infinite;
+    transform-origin: center;
+}
+
 .slow-rotate {
     animation: slowRotate 600s linear infinite;
     transform-origin: center;
