--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,9 @@
     transform-origin: center;
 }
 
+html,
 body {
-    overscroll-behavior: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
